--- a/index.html
+++ b/index.html
@@ -203,7 +203,30 @@
             </div>
          </div>
          <!--点位-->
-         <div></div>
+         <div class="point panel">
+            <div class="inner">
+               <h3>点位分布统计</h3>
+               <div class="chart">
+                  <div class="pie"></div>
+                  <div class="data">
+                     <div class="item">
+                        <h4>320,11</h4>
+                        <span>
+                           <i class="icon-dot" style="color: #ed3f35"></i>
+                           点位总数
+                        </span>
+                     </div>
+                     <div class="item">
+                        <h4>418</h4>
+                        <span>
+                           <i class="icon-dot" style="color: #eacf19"></i>
+                           本月新增
+                        </span>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
       </div>
       <div class="column">
          <!--地图-->
