完成销售模块

--- a/index.html
+++ b/index.html
@@ -295,8 +295,22 @@
                </div>
             </div>
          </div>
-         <!--销售-->
-         <div></div>
+         <!-- 销售额 -->
+         <div class="sales panel">
+            <div class="inner">
+               <div class="caption">
+                  <h3>销售额统计</h3>
+                  <a href="javascript:;" class="active" data-index="year">年</a>
+                  <a href="javascript:;" data-index="quarter">季</a>
+                  <a href="javascript:;" data-index="month">月</a>
+                  <a href="javascript:;" data-index="week">周</a>
+               </div>
+               <div class="chart">
+                  <div class="label">单位:万</div>
+                  <div class="line"></div>
+               </div>
+            </div>
+         </div>
          <div>
             <!--渠道-->
             <div></div>
