完成轮播功能

--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
             <div class="inner">
                <!-- 筛选 -->
                <div class="filter">
-                  <a href="javascript:;" class="active">365天</a>
-                  <a href="javascript:;">90天</a>
-                  <a href="javascript:;">30天</a>
-                  <a href="javascript:;">24小时</a>
+                  <a href="javascript:;" class="active" data-index="day365">365天</a>
+                  <a href="javascript:;" data-index="day90">90天</a>
+                  <a href="javascript:;" data-index="day30">30天</a>
+                  <a href="javascript:;" data-index="day1">24小时</a>
                </div>
                <!-- 数据 -->
                <div class="data">
