--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <script src="js/echarts.min.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/china.js"></script>
+  <script src="js/myMap.js"></script>
 </head>
 
 <body>
